--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-"Hellow World" 
+Hello World
+
+My name is Max I am a first year student at CUNY City College of New York.
+
+This page was made for my ENGR 10200 class.
