--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ENGR 10200 Class Page</title>
+</head>
+<body>
 
-My name is Max I am a first year student at CUNY City College of New York.
+    <h1>Hello World,</h1>
+    <p>My name is Max. I am a first-year student at CUNY City College of New York.</p>
+    <p>This page was made for my ENGR 10200 class.</p>
 
-This page was made for my ENGR 10200 class.
+</body>
+</html>
+
