--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p>My name is Max. I am a first-year student at CUNY City College of New York.</p>
     <p>This page was made for my ENGR 10200 class.</p>
 
+    <img src="https://github.com/MaxManzi/MaxManzi.github.io/blob/main/me.jpg" alt="This is a picture of me.">
+
 </body>
 </html>
 
